Project Assignment/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>